# start

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
.github/workflows/: main.yml  ubuntu-18.yml  ubuntu-20.yml  ubuntu-22.yml
src/: _kernel.h  args.cpp  args.h  config.cpp  http.cpp  main.cpp  miner.cpp  miner.h  miningConfig.cpp  tests.cpp  updateThread.cpp
